[PE] Don't truncate table cell's padding

Truncation caused inadequate logical width when padding is like 1.7px.

Bug: 817342
Change-Id: Ibdb76cc528cc7e04801fe65409bb8f60e5ac69a5
Reviewed-on: https://chromium-review.googlesource.com/943827
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540991}
Former-commit-id: 14350ac7143cb3ec2a216d5f14233f532b8ca87a